# github-token-exchange

./: .dockerignore  .env.example  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml  oai-agent.yml  oidc-token.yaml
app/: auth.py  config.py  github.py  main.py
dev_tools/: get_oidc_token.md
tests/: test_auth.py  test_config.py  test_github.py  test_main.py
